human now can play with trained machine!

--- a/webpage/index.html
+++ b/webpage/index.html
@@ -11,7 +11,9 @@
 </head>
 
 <body>
-
+    <button id="train-btn">Train</button>
+    <button id="start-btn">Play</button>
+    <div id="choice-field"></div>
 </body>
 
 </html>
