Complete the front-end view of this game!

--- a/webpage/index.html
+++ b/webpage/index.html
@@ -11,9 +11,17 @@
 </head>
 
 <body>
-    <button id="train-btn">Train</button>
-    <button id="start-btn">Play</button>
+    <div id="main">
+        <div id="opponent-choice-msg"></div>
+        <div id="coin-desk">Click Train to train the computer, and then click Play!</div>
+        <div id="my-choice-msg"></div>
+    </div>
     <div id="choice-field"></div>
+    <div id="btn-field">
+        <button id="train-btn" class="game-btn">Train</button>
+        <button id="start-btn" class="game-btn">Play</button>
+        <button id="restart-btn" class="game-btn">Restart</button>
+    </div>
 </body>
 
 </html>
