--- a/webpage/index.html
+++ b/webpage/index.html
@@ -14,7 +14,7 @@
     <div id="main">
         <div id="opponent-choice-msg"></div>
         <div id="coin-desk">Click Train to train the computer, and then click Play!</div>
-        <div id="my-choice-msg"></div>
+        <div id="my-choice-msg">You lose if you pick up the last coin.</div>
     </div>
     <div id="choice-field"></div>
     <div id="btn-field">
