clear code and improve UX

--- a/webpage/index.html
+++ b/webpage/index.html
@@ -22,6 +22,7 @@
         <button id="start-btn" class="game-btn">Play</button>
         <button id="restart-btn" class="game-btn">Restart</button>
     </div>
+    <div id="unavailable-choice">Unavailable Choice</div>
 </body>
 
 </html>
