--- a/index.html
+++ b/index.html
@@ -5,17 +5,14 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <link rel="stylesheet" href="./style.css" />
-        <script type="module" src="./modules/script.js" defer></script>
+        <script type="module" src="./js/main.js" defer></script>
         <title>Pick Coins</title>
     </head>
-
     <body>
         <div id="main">
-            <div id="opponent-choice-msg"></div>
-            <div id="coin-desk">
-                Click Train to train the computer, and then click Play!
-            </div>
-            <div id="my-choice-msg">You lose if you pick up the last coin.</div>
+            <div id="opponent-desk"></div>
+            <div id="public-desk"></div>
+            <div id="my-desk"></div>
         </div>
         <div id="choice-field"></div>
         <div id="btn-field">
@@ -23,6 +20,10 @@
             <button id="start-btn" class="game-btn">Play</button>
             <button id="restart-btn" class="game-btn">Restart</button>
         </div>
-        <div id="unavailable-choice">Unavailable Choice</div>
+        <div id="warning-message">Unavailable Choice</div>
+        <div id="hint">
+            <div>Click Train to train the computer, and then click Play!</div>
+            <div>You lose if you pick up the last coin.</div>
+        </div>
     </body>
 </html>
